Set fixed-header z-index

--- a/fixed-header/styles.css
+++ b/fixed-header/styles.css
@@ -28,6 +28,7 @@ h1,h2,h3 {
 header .title {
    font-size: 2em;
    line-height: 2em;
+   z-index: 1;
 }
 
 .content-container{
